# raptor

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.txt  LICENSE  LICENSE.txt  README.build.md  README.md  _typos.toml  buildit.py  travis.sh  wscript
examples/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark_ATA.cpp  benchmark_amg.cpp  benchmark_amg_spgemm.cpp  benchmark_charm.cpp  benchmark_commpkg.cpp  benchmark_exxon.cpp  benchmark_hypre.cpp  benchmark_matmult.cpp  benchmark_matops.cpp  benchmark_matrix.cpp  benchmark_mfem.cpp  benchmark_nek5000.cpp  benchmark_omp.cpp  benchmark_par_spmv.cpp  benchmark_pcg.cpp  benchmark_probe.cpp  benchmark_random.cpp  benchmark_reader.cpp  benchmark_rss.cpp  benchmark_setup.cpp  benchmark_setup_sweeps.cpp  benchmark_solve.cpp  benchmark_spgemm_overlap.cpp  benchmark_spmv.cpp  benchmark_spmv_overlap.cpp  benchmark_tap_amg.cpp  benchmark_tap_matmult.cpp  benchmark_tap_spgemm.cpp  benchmark_tap_spmv.cpp  benchmark_topo.cpp  benchmark_topo_mfem.cpp  benchmark_topo_spmv.cpp  calc_model_params.cpp  clear_cache.hpp  coo_example.cpp  csr_example.cpp  dist_mtx.cpp  (+22 more)
examples/eigendemos/: matrices.cpp  run.sh
old_raptor/tests/: CMakeLists.txt  par_compare.hpp
raptor/: CMakeLists.txt  README.md  core  multilevel.hpp  par_strength.cpp  raptor.hpp  strength.cpp  types.hpp  wscript
raptor/aggregation/: CMakeLists.txt  README.md  aggregate.cpp  aggregate.hpp  candidates.cpp  candidates.hpp  mis.cpp  mis.hpp  par_aggregate.cpp  par_aggregate.hpp  par_candidates.cpp  par_candidates.hpp  par_mis.cpp  par_mis.hpp  par_prolongation.cpp  par_prolongation.hpp  par_smoothed_aggregation_solver.hpp  prolongation.cpp  prolongation.hpp  smoothed_aggregation_solver.hpp  strength.cpp
raptor/aggregation/seq/: prolongation.hpp
raptor/aggregation/tests/: CMakeLists.txt  test_aggregate.cpp  test_aggregation.cpp  test_candidates.cpp  test_mis.cpp  test_par_aggregate.cpp  test_par_candidates.cpp  test_par_mis.cpp  test_par_prolongation.cpp  test_par_smoothed_aggregation.cpp  test_par_strength.cpp  test_prolongation.cpp  test_smoothed_aggregation.cpp  test_strength.cpp  test_tap_aggregate.cpp  test_tap_candidates.cpp  test_tap_mis.cpp  test_tap_prolongation.cpp
raptor/aorthonormalization/: CMakeLists.txt  cgs.cpp  cgs.hpp  mgs.cpp  mgs.hpp  par_cgs.cpp  par_cgs.hpp  par_cgs_timed.cpp  par_cgs_timed.hpp  par_mgs.cpp  par_mgs.hpp
raptor/aorthonormalization/tests/: CMakeLists.txt  split_timings.cpp  test_cgs.cpp  test_mgs.cpp  test_par_bcgs.cpp  test_par_cgs.cpp  test_par_mgs.cpp
raptor/core/: CMakeLists.txt  CMakeLists_old.txt  Matrix.hpp  ParComm.hpp  ParCommPkg.hpp  ParMatrix.cpp  ParMatrix.hpp  ParVector.cpp  ParVector.hpp  Types.hpp  Vector.hpp  array.hpp  comm_data.cpp  comm_data.hpp  comm_mat.cpp  comm_pkg.cpp  comm_pkg.hpp  communicate.cpp  communicate.hpp  hierarchy.cpp  hierarchy.hpp  level.cpp  level.hpp  matrix.cpp  matrix.hpp  mpi_types.cpp  mpi_types.hpp  par_comm.cpp  par_comm.hpp  par_matrix.cpp  par_matrix.hpp  par_vector.cpp  par_vector.hpp  partition.hpp  puppers.hpp  tap_comm.cpp  tap_comm.hpp  topology.hpp  topology_params.hpp  types.hpp  (+4 more)
raptor/core/cuda/: matrix_cuda.hpp  vector_cuda.cu  vector_cuda.hpp  vector_cuda_kernels.cuh
raptor/core/seq/: matrix.cpp  matrix.hpp  vector.cpp
raptor/core/serial/: vector.cpp
raptor/core/tests/: CMakeLists.txt  ParVector.cpp  test_ILU.cpp  test_ILU_bsr.cpp  test_block_matrix.cpp  test_bsr_matrix.cpp  test_condensed_par_matrix.cpp  test_cuda_vector.cu  test_init_comm.cpp  test_mat_mult.cpp  test_matrix.cpp  test_par_block_conversion.cpp  test_par_block_matrix.cpp  test_par_block_vector.cpp  test_par_bsr.cpp  test_par_comm.cpp  test_par_matrix.cpp  test_par_transpose.cpp  test_par_vector.cpp  test_tap_comm.cpp  test_transpose.cpp
raptor/gallery/: CMakeLists.txt  Diffusion.hpp  Stencil.hpp  diffusion.cpp  diffusion.hpp  exxon_reader.cpp  exxon_reader.hpp  laplacian27pt.cpp  laplacian27pt.hpp  linear_elasticity.cpp.old  linear_elasticity.hpp  matrix_IO.cpp  matrix_IO.hpp  matrix_market.cpp  matrix_market.hpp  noncontiguous.cpp  noncontiguous.hpp  par_matrix_IO.cpp  par_matrix_IO.hpp  par_matrix_market.cpp  par_matrix_market.hpp  par_random.cpp  par_random.hpp  par_stencil.cpp  par_stencil.hpp  random.cpp  random.hpp  stencil.cpp  stencil.hpp
raptor/gallery/tests/: CMakeLists.txt  test_aniso.cpp  test_exxon_reader.cpp  test_laplacian.cpp  test_matrix_market.cpp  test_par_aniso.cpp  test_par_laplacian.cpp  test_par_matrix_market.cpp  (+1 more)
raptor/hypre/: hypre_wrapper.cpp  hypre_wrapper.hpp
raptor/krylov/: CMakeLists.txt  bicgstab.cpp  bicgstab.hpp  cg.cpp  cg.hpp  par_bicgstab.cpp  par_bicgstab.hpp  par_cg.cpp  par_cg.hpp  par_cg_openmp.cpp  par_cg_openmp.hpp  par_cg_timed.cpp  par_cg_timed.hpp  par_ekcg.cpp  par_ekcg.hpp  par_srecg.cpp  par_srecg.hpp  partial_inner.cpp  partial_inner.hpp  partial_inners.cpp  partial_inners.hpp
raptor/linalg/: CMakeLists.txt  add.cpp  lu_factorization.cpp  matmult.cpp  par_spmv.cpp  par_vecops.cpp  vecops.cpp
raptor/multilevel/: CMakeLists.txt  level.hpp  multilevel.hpp  par_level.hpp  par_multilevel.hpp  par_sparsify.cpp  par_sparsify.hpp
raptor/profiling/: CMakeLists.txt  profile_block_comm.cpp  profile_comm.cpp
raptor/relaxation/: CMakeLists.txt  par_relax.cpp  par_relax.hpp  relax.cpp  relax.hpp
raptor/ruge_stuben/: CMakeLists.txt  cf_splitting.cpp  cf_splitting.hpp  interpolation.cpp  interpolation.hpp  par_cf_splitting.cpp  par_cf_splitting.hpp  par_interpolation.cpp  par_interpolation.hpp  par_ruge_stuben_solver.hpp  ruge_stuben_solver.hpp
raptor/smoothed_aggregation/: CMakeLists.txt  aggregate.cpp  candidates.cpp  prolongation.hpp
raptor/tests/: CMakeLists.txt  Diffusion.cpp  cljp.py  compare.hpp  hierarchy.py  hypre_compare.hpp  mpi_main.cpp  par_compare.hpp  plot_splitting.py  rand_weights.cpp  random_mat.py  spmv.py  stencils.py  testSpmv.cpp  test_par_strength.cpp  test_spmv.cpp  test_strength.cpp  weights.txt  wscript
raptor/util/: CMakeLists.txt
reference/hpcmg/: .gitignore  CMakeLists.txt  README.md
(+589 files in other folders)
